firmware/lib/control-table/tests/ui/region_missing_repr_c.stderr
error: Region derive requires #[repr(C)]
  --> tests/ui/region_missing_repr_c.rs:11:8
   |
11 | struct NoReprC {
   |        ^^^^^^^
